--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,24 +7,22 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
   - name: Projects
     url: '#projects'
-    weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
+    weight: 20
   - name: Publications
-    url: '#featured'
-    weight: 50
-  - name: Contact
-    url: '#contact'
-    weight: 60
+    url: '#publications'
+    weight: 30
+  - name: Experience
+    url: '#experience'
+    weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
 #  - name: CV
 #    url: uploads/resume.pdf
 #    weight: 70
+
+  - name: CV
+    url: uploads/qiayuan_cv.pdf
+    weight: 70
