--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -41,7 +41,7 @@ header:
 
 footer:
   copyright:
-    notice: '© {2022} Qiayuan.'
+    notice: '© {2023} Deyang.'
     license:
       enable: true
       allow_derivatives: false
